--- a/index.html
+++ b/index.html
@@ -11,10 +11,26 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Order Food</a></li>
+                <li class="nav-item"><a href="#order-section" class="nav-link">Order Food</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Restaurant</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Testimonials</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
+                <div class="icon-conatiner">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#order-section" class="nav-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                            </svg>
+                        </a>
+                    </li>
+                </div>
             </ul>
         </nav>
     </header>
@@ -29,7 +45,7 @@
                 </div>
             </article>
         </section>
-        <section class="cards-section">
+        <section class="cards-section" id="order-section">
             <div class="cards-container">
                 <article class="card">
                     <img src="https://res.cloudinary.com/dmethdigg/image/upload/v1721903381/img4_onk6km.jpg" alt="Burger" class="card-img">
